chore: melhorias path openapi
