# backend/internal/handlers/http/docs/swagger.yaml
@@ -1,4 +1,3 @@
-basePath: /api/wallet
 definitions:
   EmptyResponseDTO:
     properties:
@@ -91,20 +90,6 @@ definitions:
         type: integer
       data:
         $ref: '#/definitions/TransactionDetail'
-      message:
-        example: Operação realizada com sucesso
-        type: string
-      status:
-        example: success
-        type: string
-    type: object
-  ResponseDTO-UserToken:
-    properties:
-      code:
-        example: 200
-        type: integer
-      data:
-        $ref: '#/definitions/UserToken'
       message:
         example: Operação realizada com sucesso
         type: string
@@ -212,42 +197,6 @@ definitions:
     x-enum-varnames:
     - TransactionTypeExpense
     - TransactionTypeIncome
-  UserLoginChangeDTO:
-    properties:
-      email:
-        type: string
-      new_password:
-        minLength: 6
-        type: string
-      session:
-        type: string
-    required:
-    - email
-    - new_password
-    - session
-    type: object
-  UserLoginDTO:
-    properties:
-      email:
-        type: string
-      password:
-        minLength: 6
-        type: string
-    required:
-    - email
-    - password
-    type: object
-  UserToken:
-    properties:
-      AccessToken:
-        type: string
-      AuthChallange:
-        type: string
-      AuthSession:
-        type: string
-      RefreshToken:
-        type: string
-    type: object
 info:
   contact: {}
   description: Wallet Rest API
@@ -257,55 +206,7 @@ info:
   title: Wallet Rest API
   version: "1.0"
 paths:
-  /auth/change:
-    post:
-      description: Change password
-      parameters:
-      - description: Login payload
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/UserLoginChangeDTO'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/ResponseDTO-UserToken'
-        "400":
-          description: Bad Request
-        "500":
-          description: Internal Server Error
-      summary: Change password
-      tags:
-      - Auth
-  /auth/login:
-    post:
-      description: User login
-      parameters:
-      - description: Login payload
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/UserLoginDTO'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/ResponseDTO-UserToken'
-        "400":
-          description: Bad Request
-        "500":
-          description: Internal Server Error
-      summary: User login
-      tags:
-      - Auth
-  /transactions:
+  /wallet/transactions:
     get:
       description: List transactions
       parameters:
@@ -364,7 +265,7 @@ paths:
       summary: Create a transaction
       tags:
       - Transactions
-  /transactions/{transactionId}:
+  /wallet/transactions/{transactionId}:
     delete:
       description: Delete transaction
       parameters:
@@ -443,7 +344,7 @@ paths:
       summary: Put a transaction
       tags:
       - Transactions
-  /transactions/{transactionId}/details:
+  /wallet/transactions/{transactionId}/details:
     get:
       description: List transaction details
       parameters:
@@ -497,7 +398,7 @@ paths:
       summary: Create a transaction detail
       tags:
       - Transactions
-  /transactions/{transactionId}/details/{detailId}:
+  /wallet/transactions/{transactionId}/details/{detailId}:
     delete:
       description: Delete a transaction detail by its id
       parameters:
